# Macro-Shocks-Portfolio-Risk-Engine

./: README.md
Macro-Shocks-Portfolio-Risk-Engine/: CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  real_world_scenario_tests.py  requirements-api.txt  requirements-dev.txt  requirements.txt
Macro-Shocks-Portfolio-Risk-Engine/cpp/: CMakeLists.txt
Macro-Shocks-Portfolio-Risk-Engine/cpp/bindings/: fast_scorer_bindings.cpp
Macro-Shocks-Portfolio-Risk-Engine/cpp/include/: fast_scorer.hpp
Macro-Shocks-Portfolio-Risk-Engine/cpp/src/scoring/: fast_scorer.cpp
Macro-Shocks-Portfolio-Risk-Engine/cpp/tests/: test_fast_scorer.cpp
Macro-Shocks-Portfolio-Risk-Engine/csharp/: MacroShockDashboard.sln
Macro-Shocks-Portfolio-Risk-Engine/csharp/src/MacroShockDashboard/: App.xaml  App.xaml.cs  MacroShockDashboard.csproj
Macro-Shocks-Portfolio-Risk-Engine/csharp/src/MacroShockDashboard/Models/: RiskModels.cs
Macro-Shocks-Portfolio-Risk-Engine/csharp/src/MacroShockDashboard/Services/: RiskApiService.cs
Macro-Shocks-Portfolio-Risk-Engine/csharp/src/MacroShockDashboard/ViewModels/: MainViewModel.cs
Macro-Shocks-Portfolio-Risk-Engine/csharp/src/MacroShockDashboard/Views/: MainWindow.xaml  MainWindow.xaml.cs
Macro-Shocks-Portfolio-Risk-Engine/csharp/tests/MacroShockDashboard.Tests/: MacroShockDashboard.Tests.csproj  ViewModelTests.cs
Macro-Shocks-Portfolio-Risk-Engine/docker/: Dockerfile
Macro-Shocks-Portfolio-Risk-Engine/docs/: architecture.md  data_architecture.md  deployment.md  governance.md  model_architecture.md  roadmap.md  runbook.md
Macro-Shocks-Portfolio-Risk-Engine/examples/: run_end_to_end.py  synthetic_data_generator.py
Macro-Shocks-Portfolio-Risk-Engine/python/configs/: base.yaml  production.yaml  research.yaml  staging.yaml
Macro-Shocks-Portfolio-Risk-Engine/python/data_schema/: models.py
Macro-Shocks-Portfolio-Risk-Engine/python/notebooks/: 01_event_study_walkthrough.ipynb
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/: __init__.py  __main__.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/backtesting/: event_study.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/data/: feed_provider.py  ingestion.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/data_schema/: __init__.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/event_detection/: calendar.py  detector.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/execution/: oms_interface.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/market_context/: vulnerability_scorer.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/monitoring/: alert_manager.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/nlp/: hawkish_dovish.py  policy_surprise_vector.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/orchestration/: api.py  pipeline.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/portfolio_impact/: impact_translator.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/risk_scoring/: composite_scorer.py
Macro-Shocks-Portfolio-Risk-Engine/python/src/macro_shock/scenario_engine/: scenario_tree.py
Macro-Shocks-Portfolio-Risk-Engine/python/tests/: conftest.py
Macro-Shocks-Portfolio-Risk-Engine/python/tests/fixtures/: market_fixtures.py
Macro-Shocks-Portfolio-Risk-Engine/python/tests/integration/: test_pipeline_integration.py
Macro-Shocks-Portfolio-Risk-Engine/python/tests/unit/: test_backtesting.py  test_event_detection.py  test_monitoring.py  test_nlp.py  test_portfolio_impact.py  test_risk_scoring.py
Macro-Shocks-Portfolio-Risk-Engine/scripts/: deploy_production.sh  health_check.py  init_postgres.sql  init_timescaledb.sql  migrate_db.py  run_backtest.sh  setup_env.sh  smoke_test.py
